# pyDESeq2

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  setup.py
src/pydeseq2/: __init__.py  _core_cy.c  _core_cy.pyx  deseq2.py
tests/: test_cython_acceleration.py  test_phase2_features.py  test_phase3_features.py  test_r_parity_optional.py  test_size_factors.py  test_synthetic_pipeline.py
