[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3.0", "numpy>=1.23", "scipy>=1.9"]
build-backend = "setuptools.build_meta"

[project]
name = "pydeseq2"
version = "0.1.0"
description = "Python reimplementation of the DESeq2 statistical workflow."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "pyDESeq2 contributors"}
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "pandas>=1.5",
  "patsy>=0.5",
  "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
